--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <section>
-      <img src="../assets/image-qr-code.png" alt="" />
+      <img
+        src="../assets/image-qr-code.png"
+        alt="QR-code for front-end mentor challenge"
+      />
       <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
